<resources>
    <string name="app_name">10AugPortfolio</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_there">Hello there!</string>
    <string name="signup">Signup</string>
    <string name="slash">/</string>
    <string name="newuser">NewUser</string>
    <string name="register">Register</string>
    <string name="mail">Mail</string>
    <string name="welcome">Welcome</string>
    <string name="price">price</string>
    <string name="username">Username</string>
</resources>