<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/textView"
        style="@style/MainTV"
        android:layout_marginStart="32dp"
        android:text="@string/hello_there"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"

        app:layout_constraintStart_toStartOf="parent"
        >

    </TextView>

    <TextView
        android:id="@+id/textView2"
        style="@style/MainTV"
        android:text="@string/welcome_back"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gl_hor_2"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/gl_hor_3">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etlog"
            style="@style/ThemeInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login"
                android:layout_marginBottom="8dp"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPassw"
            style="@style/ThemeInputLayout"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etlog"
            app:passwordToggleDrawable="@drawable/eye"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/BtnMain"
            android:backgroundTint="@color/colorMainYellow"
            android:text="@string/login"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassw">

        </com.google.android.material.button.MaterialButton>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/newUserBtnTV"
            style="@style/MainTV"
            android:text="@string/newuser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <TextView
            android:id="@+id/textView4"
            style="@style/MainTV"
            android:text="@string/slash"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/newUserBtnTV" />

        <TextView
            style="@style/MainTV"
            android:text="@string/signup"
            android:textColor="@color/colorMainYellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>